# django_agenda

./: .gitignore  README.md  pyproject.toml
project/: db.sqlite3
project/base_static/global/css/: style.css
project/base_templates/global/: base.html
project/base_templates/global/partials/: _messages.html  _pagination.html
project/contact/: admin.py  forms.py  models.py  urls.py  views.py
project/contact/migrations/: 0001_initial.py  0002_contact_image.py  0003_contact_show.py  0004_category_contact_category.py  0005_alter_category_options_contact_owner.py
project/contact/templates/contact/: contact.html  create.html  index.html  login.html  register.html
project/contact/templates/contact/partials/: user-form.html
project/project/: settings.py  urls.py
project/utils/: create_contacts.py
