[tool.poetry]
name = "django-agenda"
version = "0.1.0"
description = ""
authors = ["João Lucas <ylucasslalves@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
pillow = "*"
ipython = "^8.29.0"
faker = "^30.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
